force-app/main/default/objects/Case_Template__c/Case_Template__c.object-meta.xml
<CustomObject>
    <label>Case Template</label>
    <nameField>
        <label>Case Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>