force-app/main/default/objects/Case_Template__c/fields/Assign_to_Self__c.field-meta.xml
<CustomField>
    <fullName>Assign_to_Self__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox field indicate that user wants to assign itself as a case owner.</description>
    <label>Assign to Self</label>
    <type>Checkbox</type>
</CustomField>